# biblio

./: .swp  Untitled.ipynb  pyproject.toml
biblio.egg-info/: PKG-INFO
src/: __init__.py
src/biblio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/biblio/.ipynb_checkpoints/: __init__-checkpoint.py
src/biblio/mod1/.ipynb_checkpoints/: __init__-checkpoint.py
src/resources/: archivo.txt
