[project]
name = "biblio"
version = "0.0.2"
dependencies = [
    'numpy; python_version>"3.7"',
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = []  # empty by default
namespaces = true  # true by default
