[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biblio"
version = "0.1.0"
description = "Un módulo que contiene MeshDis y resta"
authors = [{ name = "Tu Nombre", email = "tucorreo@example.com" }]
#readme = "README.md"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["biblio", "biblio.mod1"]
#license-files = ["MIT"]

[tool.setuptools.package-data]
"biblio" = ["../resources/*"]
